# rust_spike_model_emnist

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  RESULTS.md
models/: BREAKTHROUGH_EMNIST_Results_1751083688_99.46pct_+3.04.json
src/: lib.rs
